# prop

./: .gitattributes  .gitignore  .gitmodules  buildall
api/: Dockerfile  requirements.txt
assimilate/: Dockerfile  requirements.txt
cosmic/: Dockerfile  backfill_hmf2.py  backfill_irtam.py  backfill_modip_mp.py  cosmic.py  requirements.txt
diffusion/: .containerignore  .gitignore  CRUSH.md  Dockerfile  pixi.toml  pyproject.toml  run
diffusion/app/: compute_val_loss.py  forecast_24h.py  generate.py  generate_guided.py  generate_guided_cfg.py  guidance_test.py  interpolate.py  interpolate_cfg.py  interpolate_inpaint.py  interpolate_observations.py  interpolate_pixel_space.py  models.py  models_forecast.py  movie.py  movie_cfg.py  server.py  test_dit.py  test_vae_reconstruction.py  train_conditioned_diffusion.py  train_diffusion.py  train_dit_diffusion.py  train_forecast_dit.py  train_guidance.py  train_observation_dit.py  train_vae.py  train_vprediction.py  util.py
diffusion/app/data/: forecast_datamodule.py  generate_forecast_dataset.py  jsonapi.py  recomp.py
essn/: Dockerfile  essn.py  requirements.txt
etc/: db.env.in  ports.env  postgres.env.in
giro-loader/: Dockerfile  get_data_station.py  requirements.txt  tick.py  tread.py
history/: Dockerfile  cpanfile
holdout-eval/: Dockerfile  heval.py  requirements.txt
ipe/: Dockerfile  ipe.py  requirements.txt
iri2016/: .gitattributes  Dockerfile
iri2016/src/: igrf.for  iri2016_driver.F90  iri_opt.F90  iri_ts.F90  irifun.for  irimap.F90  irisub.for  meson.build
iri2020/: Dockerfile
iri2020/src/: iri2020_driver.F90  iri_opt.F90  iri_ts.F90  iridreg.for  iriflip.for  irifun.for  irimap.F90  irirtam.for  irisub.for  irtam_driver.F90  meson.build  rocdrift.for  test.f90
irimap/: Dockerfile  irimap.py  requirements.txt
iturhfprop/: .gitignore  Dockerfile  cpanfile
loader/: Dockerfile  cpanfile
noaa-loader/: Dockerfile  cpanfile
pred/: Dockerfile  requirements.txt
pred4d/: Dockerfile  Dockerfile.cuda  requirements-cuda.txt  requirements.txt
raytrace/: Dockerfile  requirements.txt
renderer/: Dockerfile  Dockerfile.pixi  pixi.toml  requirements.txt
scheduler/: Dockerfile  cpanfile
storm/: Dockerfile  requirements.txt
systemd/: backfill-irtam.service  backfill-irtam.timer  fetch-chain.service  fetch-chain.timer  giro-loader.service  giro-loader.timer  irimap.service  noaa-loader.service  prop-api.service  prop-assimilate.service  prop-cosmic.service  prop-cosmic.timer  prop-essn.service  prop-history.service  prop-holdout-eval.service  prop-ipe.service  prop-memcached.service  prop-podman-pod.service  prop-postgres.service  prop-pred.service  prop-raytrace.service  (+8 more)
(+97 files in other folders)
